1.集成串口通信库 2.实现串口发送心跳包、充电状态和当前信息等功能 3.实现串口接收，并解析数据包 4.实现串口自动发送数据，单独发送充电状态命令无问题。
5.实现自动发送心跳包、充电状态、当前信息等命令
6.调整充电桩软件，实现接收串口数据并能够解析

--- a/CPServer.csproj
+++ b/CPServer.csproj
@@ -43,7 +43,7 @@
     <Compile Include="CPBackDataParse.cs" />
     <Compile Include="CPDataCheck.cs" />
     <Compile Include="CPSendDataPackage.cs" />
-    <Compile Include="test.cs" />
+    <Compile Include="serialPortClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
