1.添加了bmob模块，可以向bmob服务器上传数据 2.能够发送一台充电桩的数据到bmob服务器中 3.想要实现多台充电桩数据能够上传到服务器中，得设计多张表---还未实现 4.还未实现接收服务器内容 5.还未实现Bmob服务器的API封装

--- a/CPServer.csproj
+++ b/CPServer.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bmob-Windows">
+      <HintPath>..\bmob-demo-csharp-master\bmob-demo-csharp-master\examples\bmob-desktop-demo\lib\Bmob-Windows.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
